--- a/ruoyi/src/main/resources/application.yml
+++ b/ruoyi/src/main/resources/application.yml
@@ -92,33 +92,21 @@ token:
     # 加载全局的配置文件
 #    configLocation: classpath:mybatis/mybatis-config.xml
 mybatis-plus:
-  mapper-locations: classpath:mybatis/**/*Mapper.xml
+  mapperLocations: classpath:mybatis/**/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
   typeAliasesPackage: com.ruoyi.project.**.domain
   global-config:
-    # 数据库相关配置
+    #是否控制台 print mybatis-plus 的 LOGO
+    banner: true
     db-config:
       #主键类型  AUTO:"数据库ID自增", INPUT:"用户输入ID",ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
-      id-type: AUTO
-      #字段策略 IGNORED:"忽略判断",NOT_NULL:"非 NULL 判断"),NOT_EMPTY:"非空判断"
-      field-strategy: NOT_EMPTY
-      #驼峰下划线转换
-      column-underline: true
-      #数据库大写下划线转换
-      #capital-mode: true
-      #逻辑删除配置
-      #logic-delete-value: 0
-      #logic-not-delete-value: 1
-      #表名前缀
-      table-prefix: sys_
-      db-type: mysql
-    #刷新mapper 调试神器
-    refresh: true
-  # 原生配置
+      id-type: auto
+      #表前缀
+      table-prefix: tb_
+      #表名、是否使用下划线命名
+      table-underline: true
   configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: false
-  config-location: classpath:mybatis/mybatis-config.xml
+    call-setters-on-nulls: true
 
 # PageHelper分页插件
 pagehelper: 
@@ -145,4 +133,4 @@ gen:
   # 自动去除表前缀，默认是true
   autoRemovePre: false
   # 表前缀（生成类名不会包含表前缀，多个用逗号分隔）
-  tablePrefix: sys_
+  tablePrefix: tb_
