--- a/ruoyi/pom.xml
+++ b/ruoyi/pom.xml
@@ -270,6 +270,10 @@
 			<artifactId>hutool-all</artifactId>
 			<version>5.0.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
